# scaffold-webapp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.production.yml  pyproject.toml
.github/workflows/: ci.yml  push-registry.yml
app/: __init__.py  __main__.py  settings.py  worker.py
app/api/: authorization.py  payloads.py  router.py  ui_router.py
app/client/: exceptions.py
app/client/filesystem/: cache_wrapper.py  file_manager.py  s3_client.py  temporal_cache.py
app/client/http/: autoscraper.py  base.py  html_fetcher.py  httpx_html_fetcher.py
app/client/llm/: llm.py  openai.py  schemas.py  scheme_completion.py
static/css/: styles.css
static/js/: button.js
static/templates/: index.html  test.html
